Converted Augmented Image sample to use Sceneform's ARSceneView
This is the most direct conversion from using OpenGL to using
Sceneform.  Only the rendering has been changed.

Another approach would be to extend ArFragment and configure the
ARCore Session by overriding getSessionConfiguration() to enable
augmented images.  This would then elminate the camera permission,
full screen handling, and session management boilerplate.

--- a/samples/augmented_image_java/app/src/main/res/values/strings.xml
+++ b/samples/augmented_image_java/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
 -->
 <resources>
   <string name="app_name">AugImg Java</string>
+  <string name="fit_image_to_scan">Fit image to scan</string>
 </resources>
